--- a/index.html
+++ b/index.html
@@ -18,26 +18,23 @@
     <title>Product Landing Page</title>
   </head>
   <body>
-    <main class="fixed-bar">
-      <div class="container top">
-        <header id="header">
-          <div class="Logo">
-            <img
-              id="header-img"
-              src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
-              alt="Logo"
-            />
-          </div>
-          <nav id="nav-bar">
-            <ul>
-              <li><a class="nav-link" href="#features">Features</a></li>
-              <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
-              <li><a class="nav-link" href="#Pricing">Pricing</a></li>
-            </ul>
-          </nav>
-        </header>
-      </div>
-    </main>
+    <header id="header">
+      <nav id="nav-bar">
+        <div class="logo-container">
+          <img
+            id="header-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
+            alt="Logo"
+          />
+          <ul>
+            <li><a class="nav-link" href="#features">Features</a></li>
+            <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
+            <li><a class="nav-link" href="#Pricing">Pricing</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
     <div id="subscribe" class="container">
       <h2>Handcrafted, home-made masterpieces</h2>
       <form id="form" action="https://www.freecodecamp.com/email-submit">
